# hmc5883l-rs

./: Cargo.toml
examples/: compass.rs  magnetometer.rs
src/: lib.rs
