[package]
name = "hmc5883l-embedded-hal"
description = "Rust library for interfacing with HMC5883L magnetometer using embedded-hal I2C"
version = "0.0.1"
authors = ["Anton N <www.globaltrouble@gmail.com>"]
homepage = "https://github.com/globaltrouble/hmc5883l-rs"
documentation = "https://github.com/globaltrouble/hmc5883l-rs"
repository = "https://github.com/globaltrouble/hmc5883l-rs"
license = "Apache-2.0"

[dependencies]
embedded-hal = "0.2.7"
micromath = "0.4.1"
